<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuItem1"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
            android:id="@+id/menuItem2"
            android:title="@string/recommended"
            android:icon="@drawable/ic_recommended" />
    <item
            android:id="@+id/menuItem3"
            android:title="@string/search"
            android:icon="@drawable/ic_search" />
    <item
            android:id="@+id/menuItem4"
            android:title="@string/create_post"
            android:icon="@drawable/ic_camera" />
    <item
        android:id="@+id/menuItem5"
        android:title="@string/profile"
        android:icon="@drawable/ic_person" />
</menu>