<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="start"/>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:background="@drawable/btn_rounded"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="?attr/actionBarSize" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/btn_rounded"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="?attr/actionBarSize" />

</LinearLayout>