<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/createImg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/placeholder_fallback"
        android:contentDescription="@string/create_post"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_something"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:autofillHints="no"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:lines="4"
        app:layout_constraintTop_toBottomOf="@id/createImg"/>

    <Button
        android:id="@+id/postBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_now"
        android:background="@drawable/btn_rounded"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>