<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="start"/>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/inputEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio_hint"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:autofillHints="no"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:lines="4"
        android:maxLength="128"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/toolbarEdit"/>

    <CheckBox
        android:id="@+id/isPrivateEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_account_private"
        android:layout_marginTop="@dimen/space_high"
        app:layout_constraintTop_toBottomOf="@id/inputEdit"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/editBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_exit"
        android:background="@drawable/btn_rounded"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>