<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/toolbar_title_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_follow_request"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="start"/>

    </androidx.appcompat.widget.Toolbar>

    <!-- Circular profile image -->
    <FrameLayout
        android:id="@+id/profileImgLayoutR"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbarRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/profileImgR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle_crop"
            tools:ignore="ContentDescription"/>
    </FrameLayout>

    <TextView
        android:id="@+id/userNameTxtR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/defaultColor"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="@dimen/space_low"
        app:layout_constraintTop_toBottomOf="@id/profileImgLayoutR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bioTxtR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="128"
        android:text="@string/sample_text"
        android:textColor="@color/defaultColor"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_post"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/userNameTxtR"/>

    <!-- Horizontal line-->
    <View
        android:id="@+id/hlineR"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/toolbar_shadow"
        android:layout_marginTop="@dimen/space_low"
        app:layout_constraintTop_toBottomOf="@id/bioTxtR" />

    <TextView
        android:id="@+id/confirmTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_follow_text"
        android:textColor="@color/defaultColor"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/hlineR"/>

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/confirmTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/rejectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/acceptBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>